[package]
name = "pingchu"
version = "0.1.0"
edition = "2021"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arc-blroth/pingchu"
description = "tiny mouse ping detector"

[dependencies]
anyhow = "1.0.58"
humantime = "2.1.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
poise = "0.2.2"
regex = "1.5.6"
sea-orm = { version = "0.8.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
time_v1 = { package = "time", version = "0.1.44" } # why do we depend on three different version of time :concern:
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
unicode-segmentation = "1.9.0"
